2016/06/21 v59
	1. You can color the action button with colors under several conditions.

2016/06/11 v58
	1. You can choose "Use reverse order" to generate item list.

2016/06/11 v57
	1. The objective tracker frame can be move to anywhere now.

2016/06/10 v56
	1. Stance bar no longer show empty slot.

2016/06/06 v55
	1. Continue fix stance bar.

2016/06/06 v54
	1. Stance bar no longer diplay empty action buttons.
	2. No longer control the CompactRaidFrame since you can decide what to do with it yourself.

2016/06/06 v53
	1. Fix the auto-gen fail when switch the client's language.

2016/06/06 v52
	1. The auto hide stance bar won't be shown when updated.
	2. The updating for the auto popup bars will be delayed for 0.1 sec, to block too many BAG_UPDATE at a same time. And fix the items won't be displayed when player first enter the game world.

2016/06/04 v50
	1. An auto hide system is built based on macro condition.

2016/06/03 v49
	1. CompactRaidFrameManager won't be shown when solo.

2016/06/02 v48
	1. Fix a float number error.
	2. Fix action bar's scale not show well.
	3. Need IGAS v84 to fix the action bar's menu not shown bug.

2016/06/01 v47
	1. Now you can save and apply layout on single action bar.

2016/05/24 v46
	1. Fix the stance bar.

2016/05/21 v45
	1. Fix the word wrap on unit name cause error display.
	2. Fix the auto popup generator form's filter code editor's position.

2016/03/09 v44
	1. Fix an error.

2016/03/08 v43
	1. Fix auto-gen toy actions failed when entering the game.

2016/03/08 v41
	1. Add auto-generate for popup-action bars.
	2. Right-click root button of popup-action bar wouldn't trigger the action.

2016/02/27 v39
	1. Add new style for chat frames.
	2. Update for new IGAS lib, with feature fixed.

2014/10/20: v37
	1. You can use alt+mouse drag to change the flyout spell's direction, only only to create the popup-buttons.

2014/10/19: v36
	1. Now raidpanel can show buff with stacks, like shaman's Earth Shield.

2014/10/18: v35