@@ -105,7 +105,7 @@ Config = {
 		RangeChecker = {
 			Type = RangeChecker,
 			Location = { AnchorPoint("CENTER", 16, 0, nil, "LEFT") },
-			Property = { UseIndicator = true },
+			Property = { UseIndicator = true, FrameStrata="DIALOG" },
 			Locale = L"Range indicator",
 			Index = newIndex(),
 		},
